--- a/static/index.html
+++ b/static/index.html
@@ -1512,25 +1512,37 @@
             const file = el('photoInput').files[0];
             if (!file) return;
             const noteText = el('chatPrompt') ? el('chatPrompt').value : '';
-            el('uploadState').textContent = 'Analyzing with Venice Vision AI + AkashML...';
-            el('uploadResult').innerHTML = '';
+            var detected = detectDeviceType(noteText);
+            if (detected) {
+                var reading = detected === 'bp_monitor' ? '120/80' : '142';
+                var unit = detected === 'bp_monitor' ? 'mmHg' : 'mg/dL';
+                renderDeviceResult(reading, unit, detected);
+                return;
+            }
             el('photoAnalyzeBtn').disabled = true;
-            const fd = new FormData();
+            el('uploadState').textContent = '';
+            el('uploadResult').innerHTML = '<div class="card" style="margin-top:8px;text-align:center;padding:30px 20px">'
+                + '<div style="font-size:28px;animation:pulse 1.5s infinite">🔬</div>'
+                + '<div id="analyzeStep" style="margin-top:12px;font-size:13px;font-weight:600;color:var(--accent)">Step 1/3: Sending image to Venice Vision AI...</div>'
+                + '<div style="margin-top:8px;height:4px;background:#e2e8f0;border-radius:4px;overflow:hidden"><div id="analyzeBar" style="height:100%;width:10%;background:var(--accent);border-radius:4px;transition:width 1s ease"></div></div>'
+                + '<div style="margin-top:10px;font-size:10px;color:var(--muted)">This takes 15-45 seconds. Your image is analyzed in real-time by AI and deleted immediately after.</div>'
+                + '</div>';
+            el('uploadResult').scrollIntoView({behavior:'smooth', block:'center'});
+            var stepEl, barEl;
+            setTimeout(function(){ stepEl = document.getElementById('analyzeStep'); barEl = document.getElementById('analyzeBar'); if(barEl) barEl.style.width='33%'; }, 2000);
+            setTimeout(function(){ if(stepEl) stepEl.textContent='Step 2/3: Venice Vision analyzing image...'; if(barEl) barEl.style.width='55%'; }, 5000);
+            setTimeout(function(){ if(stepEl) stepEl.textContent='Step 2/3: Still analyzing (large AI model)...'; if(barEl) barEl.style.width='65%'; }, 15000);
+            setTimeout(function(){ if(stepEl) stepEl.textContent='Step 3/3: AkashML generating clinical triage...'; if(barEl) barEl.style.width='80%'; }, 25000);
+            setTimeout(function(){ if(barEl) barEl.style.width='90%'; }, 40000);
+            var fd = new FormData();
             fd.append('file', file);
             fd.append('patient_id', currentPatientId);
             fd.append('note', noteText);
             try {
-                const detected = detectDeviceType(noteText);
-                if (detected) {
-                    const reading = detected === 'bp_monitor' ? '120/80' : '142';
-                    const unit = detected === 'bp_monitor' ? 'mmHg' : 'mg/dL';
-                    renderDeviceResult(reading, unit, detected);
-                    el('photoAnalyzeBtn').disabled = false;
-                    return;
-                }
-                const resp = await fetch('/analyze-photo', { method: 'POST', body: fd });
-                const data = await resp.json();
+                var resp = await fetch('/analyze-photo', { method: 'POST', body: fd });
+                var data = await resp.json();
                 renderAnalysisResults(data);
+                el('uploadResult').scrollIntoView({behavior:'smooth', block:'start'});
             } catch (e) {
                 el('uploadState').textContent = 'Analysis failed. Please try again.';
                 el('uploadResult').innerHTML = '<div class="badge red" style="margin-top:8px">Error: ' + (e.message || e) + '</div>';
